--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
 		"prettier": "^1.18.2"
 	},
 	"lint-staged": {
-		"*.{ts, tsx}": [
+		"**/*.{ts,tsx}": [
 			"node_modules/.bin/eslint src/**/*.tsx --max-warnings=0",
 			"prettier --write",
 			"git add"
