--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
 		"react-redux": "^7.1.0",
 		"react-scripts": "3.0.1",
 		"redux": "^4.0.1",
+		"redux-actions": "^2.6.5",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-thunk": "^2.3.0",
 		"typescript": "3.5.2"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "set NODE_PATH=src && react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
@@ -39,7 +40,11 @@
 	},
 	"devDependencies": {
 		"@types/react-redux": "^7.1.0",
+		"@types/redux-actions": "^2.6.1",
+		"@typescript-eslint/eslint-plugin": "^1.11.0",
+		"@typescript-eslint/parser": "^1.11.0",
 		"eslint-config-prettier": "^6.0.0",
+		"eslint-config-react-app": "^4.0.1",
 		"eslint-plugin-prettier": "^3.1.0",
 		"husky": "^2.5.0",
 		"lint-staged": "^8.2.1",
