initial redux helpers

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"@types/node": "12.0.10",
 		"@types/react": "16.8.22",
 		"@types/react-dom": "16.8.4",
+		"axios": "^0.19.0",
+		"lodash": "^4.17.11",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
 		"react-redux": "^7.1.0",
@@ -14,11 +16,12 @@
 		"redux": "^4.0.1",
 		"redux-actions": "^2.6.5",
 		"redux-devtools-extension": "^2.13.8",
-		"redux-thunk": "^2.3.0",
+		"redux-logger": "^3.0.6",
+		"redux-saga": "^1.0.4",
 		"typescript": "3.5.2"
 	},
 	"scripts": {
-		"start": "set NODE_PATH=src && react-scripts start",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
@@ -39,8 +42,10 @@
 		]
 	},
 	"devDependencies": {
+		"@types/lodash": "^4.14.135",
 		"@types/react-redux": "^7.1.0",
 		"@types/redux-actions": "^2.6.1",
+		"@types/redux-logger": "^3.0.7",
 		"@typescript-eslint/eslint-plugin": "^1.11.0",
 		"@typescript-eslint/parser": "^1.11.0",
 		"eslint-config-prettier": "^6.0.0",
@@ -61,5 +66,6 @@
 		"hooks": {
 			"pre-commit": "lint-staged"
 		}
-	}
+	},
+	"proxy": "http://localhost:3001"
 }
