--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@types/react-dom": "16.8.4",
 		"axios": "^0.19.0",
 		"lodash": "^4.17.11",
+		"normalizr": "^3.4.0",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
 		"react-redux": "^7.1.0",
