--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"redux-devtools-extension": "^2.13.8",
 		"redux-logger": "^3.0.6",
 		"redux-saga": "^1.0.4",
+		"reselect": "^4.0.0",
 		"typescript": "3.5.2"
 	},
 	"scripts": {
