--- a/package.json
+++ b/package.json
@@ -1,73 +1,74 @@
 {
-	"name": "arc",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@types/jest": "24.0.15",
-		"@types/node": "12.0.10",
-		"@types/react": "16.8.22",
-		"@types/react-dom": "16.8.4",
-		"axios": "^0.19.0",
-		"lodash": "^4.17.11",
-		"normalizr": "^3.4.0",
-		"react": "^16.8.6",
-		"react-dom": "^16.8.6",
-		"react-redux": "^7.1.0",
-		"react-scripts": "3.0.1",
-		"redux": "^4.0.1",
-		"redux-actions": "^2.6.5",
-		"redux-devtools-extension": "^2.13.8",
-		"redux-logger": "^3.0.6",
-		"redux-saga": "^1.0.4",
-		"reselect": "^4.0.0",
-		"typescript": "3.5.2"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@types/lodash": "^4.14.135",
-		"@types/react-redux": "^7.1.0",
-		"@types/redux-actions": "^2.6.1",
-		"@types/redux-logger": "^3.0.7",
-		"@typescript-eslint/eslint-plugin": "^1.11.0",
-		"@typescript-eslint/parser": "^1.11.0",
-		"eslint-config-prettier": "^6.0.0",
-		"eslint-config-react-app": "^4.0.1",
-		"eslint-plugin-prettier": "^3.1.0",
-		"husky": "^2.5.0",
-		"lint-staged": "^8.2.1",
-		"prettier": "^1.18.2"
-	},
-	"lint-staged": {
-		"**/*.{ts,tsx}": [
-			"node_modules/.bin/eslint src/**/*.tsx --max-warnings=0",
-			"prettier --write",
-			"git add"
-		]
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
-	"proxy": "http://localhost:3001"
+  "name": "arc",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@types/jest": "24.0.15",
+    "@types/node": "12.0.10",
+    "@types/react": "16.8.22",
+    "@types/react-dom": "16.8.4",
+    "axios": "^0.19.0",
+    "lodash": "^4.17.11",
+    "normalizr": "^3.4.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.4",
+    "reselect": "^4.0.0",
+    "typescript": "3.5.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "server": "json-server --watch db.json --port=3001",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.135",
+    "@types/react-redux": "^7.1.0",
+    "@types/redux-actions": "^2.6.1",
+    "@types/redux-logger": "^3.0.7",
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-react-app": "^4.0.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "husky": "^2.5.0",
+    "lint-staged": "^8.2.1",
+    "prettier": "^1.18.2"
+  },
+  "lint-staged": {
+    "**/*.{ts,tsx}": [
+      "node_modules/.bin/eslint src/**/*.tsx --max-warnings=0",
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "proxy": "http://localhost:3001"
 }
